# eye-on-manga

./: .gitignore  Makefile.am  README.md  README.org  antigen.sh  autogen.sh  configure.ac
data/: Makefile.am  eye-on-manga.desktop
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  eye-on-manga-default.ex  eye-on-manga.doc-base.EX  eye-on-manga.substvars  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/: .#eom.h  Makefile  Makefile.am  c-edit-window.c  c-edit-window.h  c-main-window.c  c-main-window.h  c-new-item-dialog.c  c-new-item-dialog.h  collections.c  collections.h  data.c  data.h  eom-detail-window.c  eom-detail-window.h  eom-edit-window.c  eom-edit-window.h  eom-main-window.c  eom-main-window.h  eom-new-item-dialog.c  eom-new-item-dialog.h  eom.c  eom.h  eye-on-manga  interface.c  interface.h
