desktopentry_DATA = eye-on-manga.desktop

icon_26x26_DATA = icons/26x26/eye-on-manga.png
icon_40x40_DATA = icons/40x40/eye-on-manga.png
icon_64x64_DATA = icons/64x64/eye-on-manga.png
icon_scalable_DATA = icons/scalable/eye-on-manga.png

EXTRA_DIST = $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_64x64_DATA) $(icon_scalable_DATA)
