## Eye on Manga - Manga collection software for Maemo 5
# Copyright (C) 2010-2013  Tom Willemse

# Eye on Manga is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# Eye on Manga is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with Eye on Manga.  If not, see <http://www.gnu.org/licenses/>.

desktopentry_DATA = eye-on-manga.desktop

icon_26x26_DATA = icons/26x26/eye-on-manga.png
icon_40x40_DATA = icons/40x40/eye-on-manga.png
icon_64x64_DATA = icons/64x64/eye-on-manga.png
icon_scalable_DATA = icons/scalable/eye-on-manga.png

EXTRA_DIST = $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_64x64_DATA) $(icon_scalable_DATA)
