bin_PROGRAMS = eye-on-manga

eye-on-manga_LDADD = $(HILDON_LIBS)

eye-on-manga_CFLAGS = $(HILDON_CFLAGS)

eye-on-manga_SOURCES = \
	data.c data.h \
	eom.c eom.h \
	eom-edit-window.c eom-edit-window.h \
	eom-main-window.c eom-main-window.h \
	eom-new-item-dialog.c eom-new-item-dialog.h \
	interface.c interface.h
